test/files/neg/t7895b.scala
object Test {
  def foo(a: Any*) = ()

  foo(a, b)
}
